--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ picture: assets/images/twitter_pic.jpg
 # and specify source (external or local).
 resume: true
 resume-external: false
-resume-url: http://gureya.github.io/CV_David_Daharewa_GUREYA
+resume-url: CV_David_Daharewa_GUREYA
 
 #url: https://koppl.in/indigo
 url: http://gureya.github.io
@@ -34,8 +34,8 @@ disqus:
   categories: [blog, project] # only show disqus for posts that have these categories
 
 # if you don't have any of social below, comment the line
-facebook: gureya.david
-twitter: daharewa
+#facebook: gureya.david
+#twitter: daharewa
 # google: mygoogle
 # instagram: myinstagram
 # pinterest: mypinterest
