--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ picture: assets/images/twitter_pic.jpg
 # and specify source (external or local).
 resume: true
 resume-external: false
-resume-url: CV_David_Daharewa_GUREYA
+resume-url: CV_David_Daharewa_GUREYA.pdf
 
 #url: https://koppl.in/indigo
 url: http://gureya.github.io
